--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Small utilities for featured carousel and modal */
+.scroll-snap-x {
+	scroll-snap-type: x mandatory;
+}
+.scroll-snap-align-start {
+	scroll-snap-align: start;
+}
+
+.line-clamp-2 {
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
